--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -6,7 +6,8 @@
     <Compile Include="App.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Fable.Elmish.React" Version="3.0.1" />
-    <PackageReference Include="Feliz" Version="0.70.0" />
+      <PackageReference Include="Fable.Core" Version="4.2.0" />
+      <PackageReference Include="Fable.Elmish.React" Version="4.0.0" />
+      <PackageReference Include="Feliz" Version="2.7.0" />
   </ItemGroup>
 </Project>
